# simple-temperature-logger

./: .gitignore  CMakeLists.txt  appDefinitions.h  appGPIO.c  appGPIO.h  errors.c  errors.h  lwipopts.h  mbedtls_config.h  memoryInfo.c  memoryInfo.h  networkCommunication.c  networkCommunication.h  pin mapping.txt  request.h  sensors.c  sensors.h  setupWifi.h  simple_sensor.c  simple_sensor.h  wifiInfo_template.h
lib/: CMakeLists.txt  DHT20.c  DHT20.h
